# pulsar-hs-repro

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  nixpkgs.nix  pulsar-hs-repro.cabal  shell-cabal.nix  shell.nix
src/: Main.hs
