load(
    "@rules_haskell//haskell:defs.bzl",
    "ghc_plugin",
    "haskell_binary",
    "haskell_toolchain_library",
)

haskell_toolchain_library(name="base")
haskell_toolchain_library(name="polysemy")
haskell_toolchain_library(name="polysemy-plugin")
haskell_toolchain_library(name="pulsar-client-hs")

ghc_plugin(
    name = "polysemy_plugin",
    module = "Polysemy.Plugin",
    deps = ["polysemy", "polysemy-plugin"],
)

haskell_binary(
    name = "example",
    srcs = ["src/Main.hs"],
    plugins = ["polysemy_plugin"], # commenting this fixes the build
    deps = [
        "base",
        "polysemy",
        "polysemy-plugin",
        "pulsar-client-hs",
    ],
    visibility = ["//visibility:public"],
)
