name: pulsar-hs-repro
version: 0.1.0.0
build-type: Simple
cabal-version: 1.18

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Main
  -- ghc-options: -fplugin=Polysemy.Plugin
  -- ghc-options: -fplugin=GHC.TypeLits.Normalise
  build-depends: base
               , ghc-typelits-natnormalise
               , polysemy
               , polysemy-plugin
               , pulsar-client-hs